--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Trying the world’s worst smelling fruit 🤢</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">12 minutes ago</div>
+                        <div class="date">22 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>First Day Trading my the5ers Evaluation Account (Live Documentary)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">21 minutes ago</div>
+                        <div class="date">31 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Forex & CFD Expert Advisor Livetrading + Q&A Session (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">21 minutes ago</div>
+                        <div class="date">31 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Embracing Spiritual Growth</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">58 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,16 +266,16 @@
                     <div class="video-info">
                         <h3>Revealing my Strategies to any Pass Prop Firm Challenge (+ Backtests)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=s_RnBChfBqA" target="_blank">
-                    <img src="https://i.ytimg.com/vi/s_RnBChfBqA/mqdefault.jpg" alt="Why Pythagoras Was Basically a Cult Leader">
+                    <img src="https://i.ytimg.com/vi/s_RnBChfBqA/mqdefault.jpg" alt="Pythagoras & His Bizarre Cult">
                     <div class="video-info">
-                        <h3>Why Pythagoras Was Basically a Cult Leader</h3>
+                        <h3>Pythagoras & His Bizarre Cult</h3>
                         <div class="channel">Einzelgänger</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -963,7 +963,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1502,7 +1502,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Reclaiming Awe and Wonder</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>First Day Trading my the5ers Evaluation Account (Live Documentary)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">21 minutes ago</div>
+                            <div class="date">31 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Forex & CFD Expert Advisor Livetrading + Q&A Session (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">21 minutes ago</div>
+                            <div class="date">31 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5149,7 +5149,7 @@
                         <div class="video-info">
                             <h3>Revealing my Strategies to any Pass Prop Firm Challenge (+ Backtests)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Embracing Spiritual Growth</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">58 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7289,9 +7289,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=s_RnBChfBqA" target="_blank">
-                        <img src="https://i.ytimg.com/vi/s_RnBChfBqA/mqdefault.jpg" alt="Why Pythagoras Was Basically a Cult Leader">
+                        <img src="https://i.ytimg.com/vi/s_RnBChfBqA/mqdefault.jpg" alt="Pythagoras & His Bizarre Cult">
                         <div class="video-info">
-                            <h3>Why Pythagoras Was Basically a Cult Leader</h3>
+                            <h3>Pythagoras & His Bizarre Cult</h3>
                             <div class="channel">Einzelgänger</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -7579,7 +7579,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7700,7 +7700,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Reclaiming Awe and Wonder</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>Trying the world’s worst smelling fruit 🤢</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">12 minutes ago</div>
+                            <div class="date">22 minutes ago</div>
                         </div>
                     </a>
                 </div>
