--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring True Compassion</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">8 minutes ago</div>
+                        <div class="date">23 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Your Mind Should Not Be Driving Your Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">29 minutes ago</div>
+                        <div class="date">44 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Trying the world’s worst smelling fruit 🤢</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5138,7 +5138,7 @@
                         <div class="video-info">
                             <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring True Compassion</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">8 minutes ago</div>
+                            <div class="date">23 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Your Mind Should Not Be Driving Your Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">29 minutes ago</div>
+                            <div class="date">44 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>Trying the world’s worst smelling fruit 🤢</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
