--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring True Compassion</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">31 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Your Mind Should Not Be Driving Your Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">52 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -666,7 +666,7 @@
                     <div class="video-info">
                         <h3>DeMarker Indicator Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5340,7 +5340,7 @@
                         <div class="video-info">
                             <h3>DeMarker Indicator Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring True Compassion</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">31 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Your Mind Should Not Be Driving Your Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">52 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
