--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Why aren't more traders profitable?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">31 minutes ago</div>
+                        <div class="date">47 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Trendline analysis of the US Dollar...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">38 minutes ago</div>
+                        <div class="date">55 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Your Mind Should Not Be Driving Your Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>How Likely Is a Trend to Continue After ATR Surge?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -776,7 +776,7 @@
                     <div class="video-info">
                         <h3>4 Reasons Your Backtest Might Be Worthless</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Why aren't more traders profitable?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">31 minutes ago</div>
+                            <div class="date">47 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Trendline analysis of the US Dollar...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">38 minutes ago</div>
+                            <div class="date">55 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5149,7 +5149,7 @@
                         <div class="video-info">
                             <h3>How Likely Is a Trend to Continue After ATR Surge?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5406,7 +5406,7 @@
                         <div class="video-info">
                             <h3>4 Reasons Your Backtest Might Be Worthless</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Your Mind Should Not Be Driving Your Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
