--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Trying the world’s worst smelling fruit 🤢</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -974,7 +974,7 @@
                     <div class="video-info">
                         <h3>This simple Investment Strategy Beats the Market</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5461,7 +5461,7 @@
                         <div class="video-info">
                             <h3>This simple Investment Strategy Beats the Market</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>Trying the world’s worst smelling fruit 🤢</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
