--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Trying the world’s worst smelling fruit 🤢</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2305,7 +2305,7 @@
                     <div class="video-info">
                         <h3>How I went from 260 to 300 yd drives instantly - Do 2 KEYS!  #Golf #golfswing #golftips</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 04, 2025</div>
                     </div>
                 </a>
             </div>
@@ -9478,7 +9478,7 @@
                         <div class="video-info">
                             <h3>How I went from 260 to 300 yd drives instantly - Do 2 KEYS!  #Golf #golfswing #golftips</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 04, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>Trying the world’s worst smelling fruit 🤢</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
