--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>POV: Making Neapolitan Pizza While Answering Your Questions</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">25 minutes ago</div>
+                        <div class="date">33 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>After 10 Years in Trading I Finally Succeeded</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">34 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Embracing Spiritual Growth</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -677,7 +677,7 @@
                     <div class="video-info">
                         <h3>You won't stop Reform by calling their supporters racist</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>After 10 Years in Trading I Finally Succeeded</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">34 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5340,7 +5340,7 @@
                         <div class="video-info">
                             <h3>You won't stop Reform by calling their supporters racist</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Embracing Spiritual Growth</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>POV: Making Neapolitan Pizza While Answering Your Questions</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">25 minutes ago</div>
+                            <div class="date">33 minutes ago</div>
                         </div>
                     </a>
                 </div>
